# pretix-fsr-wallet

./: .gitignore  .update-locales.sh  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: style.yml  tests.yml
pretix_fsr_wallet/: __init__.py  apps.py  payment.py  signals.py  urls.py  views.py
pretix_fsr_wallet/locale/: django.pot
pretix_fsr_wallet/locale/de_Informal/LC_MESSAGES/: django.po
pretix_fsr_wallet/templates/pretix_fsr_wallet/: action_overpaid.html  action_refund.html  checkout_payment_form.html  control_payment.html  control_refund.html  new_refund_control_form.html  settings.html  settings_additional_info.html
